v1.13.2-snapshot
===========
Bug fixes:
- #6953 | #6961 The system does not update server name in Server configuration

Enhancements:
- #6954 Move language selection to advanced section
- #6962 | #6965 Add macos10.13 builder
===========

v1.13.1-stable
===========
Bug fixes:
- #6900 Remaining SonarCloud reported bug items
- #6903 Save global settings
- #6889 Systray Icon on Ubuntu Auto Start (take 2)
- #6907 Saving configuration on apply
- #6934 Text on welcome screen on macOS is shown without spaces
- #6920 Windows Installer checksums
- #6921 Handling pre-main window creation status notifications
- #6922 macOS CI build
- #6927 Text copied and pasted between Windows and Mac OS converts to japanese
- #6936 Application loses settings
- #6939 Update pipelines to use correct credentials
- #6942 All the text in all the windows should have the same font and size
- #6944 Systray icon is incorrect for macOS Big Sur
- #6941 The application doesn't recognize old settings
- #6945 Fix build for Raspberry Pi
- #6946 Add build stage to filename
- #6950 Synergy client doesn't save the server address when rebooted
- #6951 Fix issue creating standard version for Raspberry Pi

Enhancements:
- #6912 Removes UI for Screen Saver Sync and Files Drag and Drop
- #6909 Document CLI Arguments
- #6916 Main Window receives screen name change
- #6910 Don't use the word “Version” for release names because it can lead to errors during update checking.
- #6918 Removing positional union initialisation
- #6931 Update build pipeline to support macOS 10.13
- #6937 Modern C++ compiler for centOS7
- #6938 Remove auto config message from the main window
- #6941 Add Raspberry Pi Builds
- #6949 Add a new option SYNERGY_AUTOCONFIG to exclude autoconfig from the standard version
- #6952 Change OpenSSL logic to use find_package

v1.13.0-stable
===========
Bug fixes:
- #6858 Application is blurry and unfocused on macOS
- #6872 Check for dns_sd.h only when building GUI