@@ -2,10 +2,11 @@ v1.13.2-snapshot
 ===========
 Bug fixes:
 - #6953 | #6961 The system does not update server name in Server configuration
+- #6966 macOS 10.13 missing build number
 
 Enhancements:
 - #6954 Move language selection to advanced section
-- #6962 | #6965 Add macos10.13 builder
+- #6962 | #6965 Add macOS 10.13 builder
 ===========
 
 v1.13.1-stable
